# adk-samples

./: README.md  video link.txt
hackathon/: .gitignore  pyproject.toml  requirements.txt
hackathon/agent/: __init__.py  agent.py  fact_checker_agent.py  search_agent.py
hackathon/agent/tools/: __init__.py  fact_checker.py  pdf_analyzer.py  pdf_tools.py  pdf_veracity.py  system_tools.py  web_search.py
python/agents/academic-research/: pyproject.toml
python/agents/academic-research/academic_research/sub_agents/credibility_assessor/: __init__.py
python/agents/veracity-vanguard/: pyproject.toml
python/agents/veracity-vanguard/academic_research/: agent.py  prompt.py
python/agents/veracity-vanguard/academic_research/sub_agents/academic_websearch/: agent.py  prompt.py
python/agents/veracity-vanguard/academic_research/sub_agents/credibility_assessor/: prompt.py
python/agents/veracity-vanguard/academic_research/tools/: web_fetch_tool.py
python/agents/veracity-vanguard/dehype/: agent.py  prompt.py
python/agents/veracity-vanguard/dehype/sub_agents/credibility_assessor/: agent.py
python/agents/veracity-vanguard/dehype/sub_agents/source_search/: __init__.py  agent.py  prompt.py
python/agents/veracity-vanguard/dehype/tools/: __init__.py  getpage.py  pdf.py
vertex/: README.md  pyproject.toml
vertex/dehype/: architecture.mmd  prompt.py  run.py  runstreamlit.py  websearch_agent.py
vertex/dehype/tools/: __init__.py  getpage.py  pdf.py
vertex/deployment/: deploy.py  test_deployment.py
vertex/tests/: test_agents.py
