[project]
name = "academic_research"
version = "0.1"
description = "AI-driven agent designed to facilitate the exploration of the academic landscape"
authors = [{ name = "Antonio Gulli", email = "gulli@google.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "google-adk>=1.0.0,<2",
    "google-genai>=1.9.0,<2",
    "pydantic>=2.10.6,<3",
    "python-dotenv>=1.0.1,<2",
    "google-cloud-aiplatform[adk, agent-engines]~=1.93",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
