[project]
name = "academic_research"
version = "0.1"
description = "AI-driven agent designed to facilitate the exploration of the academic landscape"
authors = [{ name = "Antonio Gulli", email = "gulli@google.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "Apache License 2.0"
dependencies = [
    "google-adk>=1.0.0,<2",
    "google-genai>=1.9.0,<2",
    "pydantic>=2.10.6,<3",
    "python-dotenv>=1.0.1,<2",
    "google-cloud-aiplatform[adk, agent-engines]~=1.93",
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.3,<5",
]

[dependency-groups]
dev = [
    "google-adk[eval]>=1.0.0,<2",
    "google-cloud-aiplatform[adk, agent-engines, evaluation]~=1.93",
    "pytest>=8.3.5,<9",
    "black>=25.1.0,<26",
    "pytest-asyncio>=0.26.0,<0.27",
    "pandas>=2.2.3,<3",
    "tabulate>=0.9.0,<0.10",
]
deployment = ["absl-py>=2.2.1,<3"]

[tool.uv]
default-groups = [
    "dev",
    "deployment",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
